--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@
   @import url("light.css");
 } */
 @import url("dark.css");
-/*  */
+
+/* Just general styling for everything*/
 
 *, *::before, *::after {
     box-sizing: border-box;
@@ -26,4 +27,22 @@ body{
 
     min-width: 100%;
     min-height: 100vh;
+
+    /* To display content correctly*/
+    display:grid;
+    grid-template-areas: "header" "main" "footer";
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: 1fr;
+}
+
+header, .header{
+    grid-area: header;
+}
+
+main, .main{
+    grid-area: main;
+}
+
+footer, .footer{
+    grid-area: footer;
 }
