--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url("pages/header.css");
 @import url("pages/main.css");
 @import url("pages/footer.css");
+@import url("fonts/fonts.css");
 /* Media query for color scheme preference */
 /* @media screen and (prefers-color-scheme: dark) {
   @import url("dark.css");
@@ -15,13 +16,20 @@
 
 *, *::before, *::after {
     box-sizing: border-box;
-    margin: 0; 
+    margin: 0;
     padding: 0;
 }
 
-body{
+/* Hero font */
+.hero {
+    font-family: 'Nanum Myeongjo', serif;
+    font-size: 2em;
+    /* 2em  */
+}
+
+body {
     font-family: 'Roboto', sans-serif;
-    font-size: 14px;
+    font-size: 15px;
     color: var(--clr-font-primary);
     line-height: 1.5;
 
@@ -29,20 +37,25 @@ body{
     min-height: 100vh;
 
     /* To display content correctly*/
-    display:grid;
-    grid-template-areas: "header" "main" "footer";
-    grid-template-rows: auto 1fr auto;
+    display: grid;
+    grid-template-areas: "header""main""footer";
+    grid-template-rows: auto minmax(80vh, 1fr) auto;
     grid-template-columns: 1fr;
 }
 
-header, .header{
+header, .header {
     grid-area: header;
 }
 
-main, .main{
+main, .main {
     grid-area: main;
 }
 
-footer, .footer{
+footer, .footer {
     grid-area: footer;
+}
+
+.error {
+    color: var(--clr-font-accent);
+    background-color: var(--clr-tint1);
 }
