--- a/css/pages/main.css
+++ b/css/pages/main.css
@@ -1,18 +1,34 @@
 main .front {
-    background-color: white;
+    position: relative;
+    background-color: black;
+    /* Size */
     height: calc(100vh);
+    /* Flexbox */
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    /* Font color, size and alignment */
     text-align: center;
-    color: var(--clr-font-primary);
+    color: var(--clr-font-inverted);
     letter-spacing: 0.15em;
     text-transform: uppercase;
     padding: 0.5em;
-    opacity: 1;
     font-size: 2.5em;
     font-family: 'Nanum Myeongjo', serif;
+}
+
+main .front::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    /* Front bg image */
+    background-color: black;
+    background-image: url("../../img/front.JPG");
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.85;
 }
 
 main .front h2 {
@@ -43,20 +59,20 @@ main .front .wrapper i {
     position: absolute;
     bottom: calc(-8vh - 1.5em);
     right: 0%;
-    /* To hide anchor first 2s its width, height is unset*/
-    animation: resize 1s linear 2s infinite;
+    width: 5vw;
+    height: 8vh;
 }
 
 .continue span {
     display: block;
-    background-color: var(--clr-font-primary);
+    background-color: var(--clr-font-inverted);
     height: 100%;
     width: 100%;
     transform-origin: center;
     clip-path: polygon(0 0%, 50% 90%, 100% 0%, 50% 50%);
     /* transition: clip-path 0.5s ease-in-out; */
     animation: pulse 2s ease infinite 2.5s, un-hide 1s linear 2s infinite;
-    opacity: 0;
+    /* opacity: 0; */
 }
 
 @keyframes pulse {
@@ -65,7 +81,7 @@ main .front .wrapper i {
     }
 
     12.5% {
-        clip-path: polygon(0 0%, 50% 100%, 100% 0%, 50% 50%);
+        clip-path: polygon(0 0%, 50% 90%, 100% 0%, 50% 50%);
     }
 
     25% {
@@ -74,7 +90,7 @@ main .front .wrapper i {
     }
 
     50% {
-        clip-path: polygon(0 0%, 50% 100%, 100% 0%, 50% 50%);
+        clip-path: polygon(0 0%, 50% 90%, 100% 0%, 50% 50%);
         ;
     }
 
@@ -96,8 +112,5 @@ main .front .wrapper i {
 @keyframes resize {
 
     0%,
-    100% {
-        width: 5vw;
-        height: 8vh;
-    }
+    100% {}
 }
